添加多市场下载支持，提交部分更新

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,3 +22,4 @@ spring:
 bing:
     img-path: d:/bingimg/
     img-url: http://www.bing.com/HPImageArchive.aspx?format=js&idx=0&n=10&mkt=zh-cn
+    markets: en-us;zh-cn
